--- a/src/webcam/CMakeLists.txt
+++ b/src/webcam/CMakeLists.txt
@@ -7,17 +7,19 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclpy REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(cv_bridge REQUIRED)
+find_package(image_transport REQUIRED)
+find_package(OpenCV REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
+include_directories(include)
 
-add_executable(webcam src/webcam.cpp)
-target_include_directories(webcam PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>)
-target_compile_features(webcam PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
-
-install(TARGETS webcam
+install(TARGETS
   DESTINATION lib/${PROJECT_NAME})
 
 if(BUILD_TESTING)
@@ -31,5 +33,10 @@ if(BUILD_TESTING)
   set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
+
+ament_python_install_package(${PROJECT_NAME})
+install(PROGRAMS
+  scripts/webcam_code.py
+  DESTINATION lib/${PROJECT_NAME})
 
 ament_package()
