basic webcam node and visual

--- a/src/webcam/CMakeLists.txt
+++ b/src/webcam/CMakeLists.txt
@@ -37,6 +37,7 @@ endif()
 ament_python_install_package(${PROJECT_NAME})
 install(PROGRAMS
   scripts/webcam_code.py
+  scripts/display.py
   DESTINATION lib/${PROJECT_NAME})
 
 ament_package()
